src/styles/general.css
/* Colors (default theme) */
:root {
  --main-color: hsl(208, 77%, 59%);
  --link-color: var(--main-color);
  --bold: 600;
}

*,
::before,
::after {
  box-sizing: border-box;
}

/* Global styles */
html {
  font-size: 12px;
  user-select: none;
  height: 100%;
  overflow: hidden;
  color-scheme: var(--color-scheme);
}

body {
  margin: 0;
  font-family:
    -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Roboto,
    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  color: var(--text);
  user-select: none;
  height: 100%;
  overflow: hidden;
}

[data-museeks-os="linux"],
[data-museeks-os="macos"] {
  font-weight: 500;
}

/** Global focus styles */
:focus:not(:focus-visible) {
  outline: none;
}

:focus-visible {
  --focus-offset: 1px;
  outline: 2px solid color-mix(in srgb, var(--main-color) 80%, white);
  outline-offset: var(--focus-offset);
  border-radius: calc(
    var(--border-radius) + var(--focus-offset)
  ); /* compensate radius on elements */
  position: relative;
  z-index: 9999 !important;
}

p {
  line-height: 1.3;
}

strong {
  font-weight: var(--bold);
}

/* App wrapper */
#wrap {
  height: 100vh;
  isolation: isolate;
}

/* Generic class that can be used on call-to-actions to show the interactibility of an element */
[data-museeks-action] {
  transition: transform 0.1s ease-in-out;

  &:hover {
    transform: scale(1.2);
  }

  &:active {
    transform: scale(1);
  }
}

/* Generic class to control the active state of some element that get
 * de-emphasized, but still visible, in case the focus is not on the list.
 */
[data-museeks-list]:focus-within {
  --active-item-bg: var(--main-color);
  --active-item-color: white;
}

/* Various CSS utils to reset styles */
.reset {
  border: 0;
  background-color: inherit;
  border-radius: 0;
  color: inherit;
}

